Fixed responsive layout issues.

--- a/styles.css
+++ b/styles.css
@@ -188,47 +188,51 @@ h1 {
 
 /* form styles start */
 
-#form {
+#formWrapper {
   display: flex;
   flex-direction: column;
 }
 
-#form p {
+#formWrapper p {
   font-size: clamp(2.5rem, 4vw, 1.5rem);
 }
 
-#form span {
+#formWrapper span {
   color: var(--header-font-colour);
 }
 
 .form {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
   margin-bottom: 10px;
+  font-size: clamp(2rem, 10vw, 2.5rem);
+  gap: 30px;
 }
 
-.form label {
-  margin: 20px 50px 0 0;
-  padding: 0;
+.formGroup {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+
+}
+
+.formGroup label {
   text-align: left;
-  font-size: clamp(2rem, 10vw, 2.5rem);
   flex-basis: 50%; /* Fix the width of the label */
   flex-shrink: 0; /* Prevents label from shrinking */
+  font-size: clamp(1.5rem, 4vw, 2.5rem);
 }
 
-.form input, .form select {
-  background-color: #7b7776;
+.formGroup input, .formGroup select {
   width: 100%;
-  margin: 20px;
+  background-color: #7b7776;
   border: 3px solid var(--main-font-colour);
   color: var(--main-font-colour);
   cursor: pointer;
   font-size: clamp(1.5rem, 4vw, 2.5rem);
-  text-align: center;
-  outline: none;
+  outline-color: transparent;
   padding: 10px;
-  box-sizing: border-box;
 }
 
 .submit-container {
@@ -367,23 +371,17 @@ a {
 
 /* Adjustments for screens max-width 580px */
 @media (max-width: 580px) {
-  form {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+
+  .formGroup {
+    flex-direction: column;
   }
-  .form {
-      flex-direction: column;
-      width: 100%;
-      
-  }
-  .form label {
+
+  .formGroup label {
       margin-right: 0;
       font-size: clamp(2rem, 3vw, 2.5rem);
       text-align: center;
   }
-  .form input, .form select {
+  .formGroup input, .formGroup select {
       font-size: clamp(1.5rem, 3vw, 1.5rem);
       width: 100%;
       height: 60px;
@@ -418,7 +416,7 @@ a {
 
 /* Adjustments for screens max-width 460px */
 @media (max-width: 460px) {
-  #form p {
+  #formWrapper p {
       padding: 20px;
   }
   .text-borders {
